# pojoc

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  player_out.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: edge.pojoc  main.rs  player.pojoc
crates/codegen/: Cargo.toml
crates/codegen/src/: builder.rs  decode.rs  encode.rs  lib.rs  structs.rs  types.rs  writer.rs
crates/compiler/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  type.rs  types.rs
crates/core/tests/: type_info_tests.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: completion.rs  hover.rs  main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: decode.rs  delta.rs  encode.rs  error.rs  intern.rs  lib.rs  varint.rs
crates/runtime/tests/: common.rs  decode_tests.rs  varint_tests.rs
crates/schema/: Cargo.toml
crates/schema/src/: ast.rs  error.rs  import_orchestrator.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/schema/src/ir/: analyzer.rs  id_gen.rs  ir_types.rs  lineage.rs  mod.rs  resolver.rs  types.rs
crates/schema/tests/: common.rs  schema_parser_tests.rs
crates/tests/: Cargo.toml  build.rs
crates/tests/benches/: decode.rs  encode.rs  intern_size.rs  intern_speed.rs  roundtrip.rs  size.rs  stress.rs
crates/tests/examples/: decode_loop.rs
crates/tests/schemas/: constraints.pojoc  edge.pojoc  intern_bench.bop  intern_bench.capnp  intern_bench.fbs  intern_bench.pojoc  intern_bench.proto  interning.pojoc  player.bop  player.capnp  player.fbs  player.pojoc  player.proto  recursive.pojoc
crates/tests/src/: lib.rs
crates/tests/tests/: constraints.rs  edge_cases.rs  errors.rs  interning.rs  recursive.rs  roundtrip.rs  zerocopy.rs
crates/tests/tests/helpers/: mod.rs
docs/: schema.md  security.md
hooks/: commit-msg  pre-commit
jetbrains-plugin/: build.gradle.kts  gradle.properties  settings.gradle.kts
jetbrains-plugin/src/main/kotlin/net/thorminate/pojoc/: PojocLanguageServer.kt  PojocLanguageServerFactory.kt  PojocTextMateBundleProvider.kt
jetbrains-plugin/src/main/resources/textmate/pojoc/: language-configuration.json  package.json
jetbrains-plugin/src/main/resources/textmate/pojoc/syntaxes/: pojoc.tmLanguage.json
scripts/: bump-version.sh
vscode-extension/: .vscodeignore  LICENSE  esbuild.js  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: pojoc.tmLanguage.json
vscode-plugin/: package.json  pnpm-lock.yaml
