[workspace]
resolver = "2"
members = [
    "crates/tests",
    "crates/cli",
    "crates/codegen",
    "crates/runtime",
    "crates/schema", "crates/core",
]

[workspace.dependencies]
heck = "0.5.0"
compact_str = { version =  "0.9.1" }
smallvec = { version = "1.15.1", features = ["serde", "union"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
thiserror = "2.0.18"