[workspace]
resolver = "2"
members = [
    "crates/tests",
    "crates/cli",
    "crates/codegen",
    "crates/runtime",
    "crates/schema", "crates/core", "crates/lsp",
]

[workspace.dependencies]
heck = "0.5.0"
compact_str = { version =  "0.9.1" }
smallvec = { version = "1.15.1", features = ["serde", "union"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_bytes = "0.11.19"
thiserror = "2.0.18"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
url = "2.5.8"