[workspace]
resolver = "2"
members = [
    "crates/tests",
    "crates/build",
    "crates/cli",
    "crates/runtime",
    "crates/lsp",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/thorminate/pojoc"
homepage = "https://github.com/thorminate/pojoc"

[workspace.dependencies]
heck = "0.5.0"
compact_str = { version =  "0.9.1" }
smallvec = { version = "1.15.1", features = ["serde", "union"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_bytes = "0.11.19"
thiserror = "2.0.18"
lsp-server = "0.8.0"
lsp-types = "0.97.0"
clap = "4.6.1"
url = "2.5.8"