[package]
name = "pojoc-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pojoc-lsp"
path = "src/main.rs"

[dependencies]
pojoc-schema = { path = "../schema" }
pojoc-core = { path = "../core" }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }