[package]
name = "pojoc-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pojoc-lsp"
path = "src/main.rs"

[dependencies]
pojoc-schema = { path = "../schema" }
pojoc-core = { path = "../core" }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }