[package]
name = "pojoc-lsp"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "pojoc-lsp"
path = "src/main.rs"

[dependencies]
pojoc-build = { path = "../build" }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }