[package]
name = "pojoc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime support for Pojoc-generated encode/decode code: a compact binary wire format with first-class schema evolution"
readme = "../../README.md"
keywords = ["serialization", "encoding", "binary", "schema", "codegen"]
categories = ["encoding"]

[lib]
path = "src/lib.rs"

[dependencies]
smallvec = { workspace = true, features = ["const_new"] }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }

[features]
default = ["serde"]
# Derives Serialize/Deserialize on runtime types (PojocFixedMap, SerdeBytes)
# to match pojoc-build-generated code. Disable on both crates together if you
# don't want serde in your dependency tree.
serde = ["dep:serde", "dep:serde_bytes", "smallvec/serde"]