[package]
name = "pojoc-tests"
version.workspace = true
edition.workspace = true

[dependencies]
pojoc = { path = "../runtime" }
prost = "0.14.3"
capnp = "0.26.0"
flatbuffers = "25.12.19"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[build-dependencies]
pojoc-codegen = {path = "../codegen"}
pojoc-schema = { path = "../schema" }
prost-build = "0.14.3"
capnpc = "0.26.0"

[[bench]]
name = "roundtrip"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "size"
harness = false