[package]
name = "pojoc-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
pojoc = { path = "../runtime" }
prost = "0.14.3"
capnp = "0.26.0"
flatbuffers = "25.12.19"
bebop = "3.2.3"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[build-dependencies]
pojoc-build = { path = "../build" }
prost-build = "0.14.3"
capnpc = "0.26.0"
bebop-tools = "3.2.3"

[[bench]]
name = "roundtrip"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "size"
harness = false